<resources>
    <string name="app_name">LL-KhoKyThuat</string>

    <string name="btn_ok">確定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_clean">清空</string>
    <string name="btn_print">列印</string>
    <string name="tt_hangmuc">項目</string>
    <string name="tt_mvl">料號</string>
    <string name="tt_ten">物料名稱</string>
    <string name="tt_quycach">規格</string>
    <string name="tt_kho">倉庫</string>
    <string name="tt_solo">批號</string>
    <string name="tt_soluong">數量</string>

    /*Menu Button*/
    <string name="btn_KT01">設備管理稽核評分表 </string>
    <string name="btn_KT02">(週)柴油堆高機檢查稽查表</string>
    <string name="btn_KT03">廢水站操作日誌</string>
    <string name="btn_KT04">廢水水質自動,連續監測站操作日記</string>
    <string name="Change_Data">更新報表項目</string>

    /* activity_main */
    <string name="main_id">帳號：</string>
    <string name="main_pwd">密碼：</string>
    <string name="main_ok">確定</string>
    <string name="main_cancel">取消</string>
    <string name="main_E01">請輸入帳號</string>
    <string name="main_E02">帳號密碼錯誤</string>
    <string name="main_E03">連線錯誤</string>
    <string name="main_language">語言</string>
    <string name="main_stay_logged">保持登入</string>

    /*check version*/
    <string name="ver_curr_version">當前版本: </string>
    <string name="ver_new_version">新版本：</string>
    <string name="ver_install">請安裝!</string>
    <string name="ver_soft_update">軟件更新</string>
    <string name="ver_update">更新</string>
    <string name="ver_downloading">正在下載</string>
    <string name="ver_please_wait">請稍後...</string>

    /*QR210 - aimt301 */
    <string name="btnQR210">技術倉掃描發料 (QR210)</string>
    <string name="M14">確定執行作業: 單據 </string>
    <string name="M15">確認刪除筆資料</string>
    <string name="M16">更新資料</string>
    <string name="M17">請先掃描卡號與確認已收料</string>
    <string name="M18">請先掃驗證物料</string>
    <string name="M19">若取消已選擇的設定也取消</string>
    <string name="M20">確認是否變更發料倉，儲位，批號？？</string>
    <string name="M21">請先選倉庫才按確定</string>
    <string name="M22">查詢</string>
    <string name="M23">操作失敗，請重試</string>
    <string name="M24">請確認是否更新資訊？</string>
    <string name="M00">程式已有新版本。請找資訊部需求更新程式。</string>
    <string name="M00_old">舊版本</string>
    <string name="M00_new">新版本</string>

    <string name="T01">人員卡號</string>
    <string name="T02">確認資訊</string>

    <string name="yes">確認</string>
    <string name="no">取消</string>
    <string name="E11">系統無此筆資料</string>
    <string name="E12">還有物料未掃描，請先掃好。</string>
    <string name="E13">請先選要發料的倉庫</string>
    <string name="E14">庫存量已為0</string>
    <string name="E15">發料量不能為0</string>
    <string name="E16">單據不能空白</string>
    <string name="E17">無此筆資料,或單據已過帳！</string>
    <string name="E18">在清單已有選過這個倉庫，不能重複</string>
    <string name="E19">發料量 > 庫存量</string>
    <string name="E20">此筆資料不存在</string>
    <string name="E21">發料量超過庫存量</string>
    <string name="E22">單據已過帳，不能變更資料</string>

    <string name="asfi511_menu">發料 (asfi511)</string>
    <string name="aimt324_menu">調撥 (aimt324)</string>
    <string name="aimt301_menu">雜發 (aimt301)</string>
    <string name="check_goods">點貨</string>
    <string name="openwarehouselist">選擇發料庫</string>
    <string name="delLvItem">刪除筆資料</string>
    <string name="changeQuantity">修改發料量</string>


    <string name="str_scanview_1">單據資訊</string>
    <string name="str_scanview_2">單據編號：</string>
    <string name="str_scanview_3">單據日期：</string>
    <string name="str_scanview_4">部門編號：</string>
    <string name="qr210_col01">項次</string>
    <string name="qr210_col02">料號</string>
    <string name="qr210_col03">料號-品名/規格</string>
    <string name="qr210_col041">倉庫-儲位-庫存量\n批號</string>
    <string name="qr210_col05">數量-單位</string>
    <string name="qr210_col06">已掃描</string>
    <string name="qr210_col07">品名/規格</string>

    <string name="option01">拋轉</string>
    <string name="option02">保存</string>
    <string name="option03">清空</string>

    <string name="switchDes">新增單外資料</string>
    <string name="switchOn">開</string>
    <string name="switchOff">關</string>

    <string name="tenSP">品名</string>
    <string name="quyCach">規格</string>
    <string name="kho">倉庫</string>
    <string name="vitri">儲位</string>
    <string name="solo">批號</string>
    <string name="soluong">數量</string>
    <string name="soluongGoc">原數量</string>
    <string name="soluongSua">修改量</string>
    <string name="soluongTonKho">庫存量</string>
    <string name="donvi">單位</string>
    <string name="chon">選擇</string>
    <string name="slUses">發料量</string>
    <string name="items_info">物料資訊</string>
    <string name="btnConfirm">設定</string>
    <string name="btnCancel">取消</string>

    <string name="E01">帳號密碼錯誤</string>
    <string name="E02">連線錯誤</string>
    <string name="E03">無資料</string>
    <string name="E04">顯示錯誤</string>
    <string name="E05">標籤已掃</string>
    <string name="E06">新增錯誤</string>
    <string name="E07">標籤已上傳</string>
    <string name="E08">工單錯誤</string>
    <string name="E09">刪除失敗</string>
    <string name="E10">請輸入帳號</string>
    <string name="M01">資料上傳</string>
    <string name="M02">確定上傳資料?</string>
    <string name="M03">確定</string>
    <string name="M04">取消</string>
    <string name="M05">刪除資料</string>
    <string name="M06">QRCode資料</string>
    <string name="M07">後製資訊有少，請至csft620補齊後再執行轉檔</string>
    <string name="M08">上傳成功</string>
    <string name="M09">上傳失敗</string>
    <string name="M10">確定刪除全部資料?</string>
    <string name="M11">錯誤</string>
    <string name="M12">離線作業無法刪除</string>
    <string name="M13">確認離線資料是否更新</string>

    /*QR211*/
    <string name="btnQR211">技術倉資料查詢 (QR211)</string>
    <string name="btn211_1">明細資料查詢</string>
    <string name="btn211_2">查詢</string>
    <string name="btn211_conf">確認</string>
    <string name="tt_diaxuong">倉庫</string>

    <string name="r211_ds">清單</string>
    <string name="r211_stt">項次</string>
    <string name="r211_kho">倉庫</string>
    <string name="r211_vtri">位置</string>
    <string name="r211_mvl">物料</string>
    <string name="r211_antoan">安全量</string>
    <string name="r211_sl">庫存量</string>

    <string name="r211_btn1">查詢</string>


</resources>