<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#AE926A"
    android:weightSum="10">

    <TextView
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/items_info"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                style="@style/title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/qr210_col02" />

            <TextView
                android:id="@+id/tv_MVL"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:paddingLeft="5dp"
                android:gravity="left|center"
                android:text="" />

            <TextView
                style="@style/title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/soluong" />

            <TextView
                android:id="@+id/tv_SL"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:paddingRight="5dp"
                android:gravity="right|center"
                android:textSize="20sp"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                style="@style/title"
                android:text="@string/qr210_col07"/>

            <TextView
                android:id="@+id/tv_Name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:paddingLeft="5dp"
                android:gravity="left|center"
                android:text=""/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            style="@style/title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/qr210_col01" />

        <TextView
            style="@style/title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/kho" />
        <TextView
            style="@style/title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/vitri" />
        <TextView
            style="@style/title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/solo" />

        <TextView
            style="@style/title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/soluong" />

        <TextView
            style="@style/title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/donvi" />

        <TextView
            style="@style/title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/chon" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_fragment_kho"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:listSelector="#DBF4BD"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnThoat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@drawable/qr210_button_custom"
            android:text="@string/btnCancel"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnXacNhan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@drawable/qr210_button_custom"
            android:text="@string/btnConfirm"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>
    </LinearLayout>



</LinearLayout>