<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    xmlns:tools="http://schemas.android.com/tools"
    android:weightSum="10"
    android:background="#A9EDBB"
    android:orientation="vertical"
    tools:context="com.example.QR210.Main.qr210_vt_view">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="3"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/items_info"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                style="@style/title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/qr210_col02" />

            <TextView
                android:id="@+id/tv_MVL"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:gravity="left|center"
                android:text=""
                android:textSize="25sp" />

            <TextView
                style="@style/title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/soluong" />

            <TextView
                android:id="@+id/tv_SL"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:gravity="right|center"
                android:text=""
                android:textSize="25sp" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                style="@style/title"
                android:text="@string/qr210_col03"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:layout_margin="5dp"
                android:textSize="20sp"
                android:gravity="left|center"
                android:text=""
                android:layout_span="1"/>

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            style="@style/title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/qr210_col01" />

        <TextView
            style="@style/title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/qr210_col041"/>

        <TextView
            style="@style/title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/qr210_col05" />


        <TextView
            style="@style/title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/slUses" />

    </LinearLayout>


    <ListView
        android:id="@+id/lv_kho"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="6"
        android:listSelector="#DBF4BD">
    </ListView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnThoat"
            android:layout_width="200dp"
            android:layout_height="90dp"
            android:layout_margin="10dp"
            android:text="@string/btnCancel"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/qr210_button_custom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnXacNhan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnXacNhan"
            android:layout_width="200dp"
            android:layout_height="90dp"
            android:layout_margin="10dp"
            android:text="@string/btnConfirm"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/qr210_button_custom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnThoat"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.262" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>