<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="#A9EDBB"
    android:orientation="vertical">

    <TextView
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/M16"
        android:textSize="45sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/M17"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="italic|bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>

        <SurfaceView
            android:id="@+id/suvqr210_upload"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="8dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:paddingLeft="20dp"
            android:gravity="left|center"
            android:text="@string/T01" />

        <EditText
            android:id="@+id/edtUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="H*****"
            android:inputType="textCapCharacters"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textAllCaps="true"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="#003FFF"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:padding="0dp">

        <Button
            android:id="@+id/btnHuy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/qr210_button_custom"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:text="@string/btnCancel" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btnOK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/qr210_button_custom"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:text="@string/btnConfirm" />

    </LinearLayout>


</LinearLayout>